# streamlit-test

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump_version.yaml  ci.yaml  docker-build-push.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TESTS.md  USECASES.md
frontend/: Dockerfile  README.md  app.py  controller.py
frontend/pages/: batch.py  deploy.py  register.py  search.py  train.py
jinja_templates/: socar_data_provider_template.j2
mkdocs/: .gitignore  Dockerfile  mkdocs.yml  nginx.conf
mkdocs/docs/: Architecture.md  Config.md  Development.md  Experiment.md  Installation.md  Model.md  Tests.md  Tutorial.md  UseCase.md  index.md
mkdocs/docs/stylesheets/: extra.css
scripts/: initialize_ssh.sh  run_actions_local.sh
scripts/event_mocking/: push_develop.json  push_develop_tag.json
somlier/: __init__.py  __main__.py
somlier/application/: constants.py  exceptions.py
somlier/config/: __init__.py  airflow.py  configure.py  docker.py  exceptions.py  k8s_controller.py
somlier/config/bentoml/: __init__.py  config.yml
somlier/config/mlflow/: __init__.py  kubernetes_job_template.yaml  kubernetes_job_with_gpu_template.yaml
somlier/core/: exceptions.py  model.py  pydantic.py  utils.py
somlier/core/bentoml/: exceptions.py
somlier/external_interfaces/: container.py  exceptions.py
somlier/schema/config/: __init__.py  assets.py  base.py  common.py  entrypoint.py  global_config.py  (+2 more)
tests/: conftest.py
tests/config/: requirements.txt  somlier.yaml
tests/integration/: test_airflow_client.py  test_git_client.py  test_mlflow_repository.py
tests/load/: locustfile.py
tests/mlflow_to_somlier/: test.py
tests/unit/: test_somlier_import.py
tests/utils/: connection.py
(+63 files in other folders)
